Fix z-index issue with watermarks in Media Player

--- a/exhibitera/apps/media_player/media_player.css
+++ b/exhibitera/apps/media_player/media_player.css
@@ -138,4 +138,5 @@ body,html {
 #watermark {
     position: absolute;
     object-fit: contain;
+    z-index: 1;
 }
